libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-2.jsonc
//@ run: fail
//@ description: type/2 should error out
["::kernel::special_form::type", "x", "Integer"]
//~^ ERROR expected 3 arguments to `type`, found 2
